# ChangeLog for app-editors/mp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/mp/ChangeLog,v 1.60 2007/12/23 22:44:53 carlo Exp $

*mp-3.3.18b (23 Dec 2007)

  23 Dec 2007; Carsten Lohrke <carlo@gentoo.org> +mp-3.3.18b.ebuild:
  Version bump.

  09 Feb 2007; Fabian Groffen <grobian@gentoo.org> mp-3.3.17.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Apr 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  -files/gentoo-synh-mp.patch-3.2.11,
  -files/mp-3.3.9-fix-builtin-regex-warnings.diff,
  -files/regex-warnings.patch, -mp-3.3.12.ebuild:
  Removing old files and version; ppc-macos was added in 3.3.17

  22 Apr 2006; Saleem Abdulrasool <compnerd@gentoo.org> mp-3.3.17.ebuild:
  Stable on x86

  06 Apr 2006; Patrick McLean <chutzpah@gentoo.org> -mp-3.3.12-r1.ebuild,
  -mp-3.3.14.ebuild, -mp-3.3.14-r1.ebuild, -mp-3.3.16.ebuild,
  mp-3.3.17.ebuild:
  Clean up some old versions and stabilize 3.3.17 on amd64.

  29 Mar 2006; Markus Rothe <corsair@gentoo.org> mp-3.3.17.ebuild:
  Stable on ppc64; bug #127217

  28 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> mp-3.3.17.ebuild:
  Stable on sparc wrt #127217

  24 Mar 2006; Aron Griffis <agriffis@gentoo.org> mp-3.3.17.ebuild:
  Mark 3.3.17 stable on ia64. #127217

  24 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> mp-3.3.17.ebuild:
  Stable on alpha wrt bug #127217. Tested by Thomas Cort <tcort@cs.ubishops.ca>

  23 Mar 2006; Stephanie Lockwood-Childs <wormo@gentoo.org> mp-3.3.17.ebuild:
  stable on ppc (Bug #127217)

*mp-3.3.17 (13 Jan 2006)

  13 Jan 2006; Saleem Abdulrasool <compnerd@gentoo.org> +mp-3.3.17.ebuild:
  Version bump from upstream

*mp-3.3.16 (19 Nov 2005)

  19 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org> +mp-3.3.16.ebuild:
  Version bump to newest upstream release

*mp-3.3.14-r1 (19 Nov 2005)

  19 Nov 2005; Saleem Abdulrasool <compnerd@gentoo.org>
  +mp-3.3.14-r1.ebuild: