@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/mp/Attic/mp-3.3.18b.ebuild,v 1.1 2007/12/23 22:44:53 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/mp/Attic/mp-3.3.18b.ebuild,v 1.2 2008/03/25 15:03:39 armin76 Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.triptico.com/download/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="alpha ~amd64 ia64 ~ppc ~ppc64 sparc x86"
 IUSE="gtk ncurses nls pcre"
 
 RDEPEND="virtual/libc
